# haystack-pdf-bot

./: .gitignore  README.md  pyproject.toml
haystack_pdf_bot/: bot.py  ingest.py  main.py
